force-app/main/default/objects/R_D_Idea__c/R_D_Idea__c.object-meta.xml
<CustomObject>
    <description>Ideas the team has to promote learning and team growth.
- Apps.
- Custom Components.
- Blog Posts.</description>
    <label>R&amp;D Idea</label>
    <nameField>
        <label>R&amp;D Idea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>R&amp;D Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>