force-app/main/default/objects/R_D_Idea__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>