force-app/main/default/objects/R_D_Idea__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Unknown problem to solve</fullName>
            </value>
            <value>
                <fullName>Market to small</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Too much effort &amp; risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>