force-app/main/default/objects/R_D_Idea__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Analysis</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved - To Do</fullName>
            </value>
            <value>
                <fullName>Approved - In Progress</fullName>
            </value>
            <value>
                <fullName>Approved - Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>