force-app/main/default/objects/R_D_Idea__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Custom Component</fullName>
            </value>
            <value>
                <fullName>Blog Post</fullName>
            </value>
            <value>
                <fullName>Internal Enhancement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>