force-app/main/default/objects/R_D_Idea__c/validationRules/Rejected_reason_reqrd_if_status_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_reason_reqrd_if_status_rejected</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Status__c)=&apos;Rejected&apos; &amp;&amp; ISBLANK(TEXT(Rejected_Reason__c))</errorConditionFormula>
    <errorDisplayField>Rejected_Reason__c</errorDisplayField>
    <errorMessage>Rejected Reason is required if status is Rejected.</errorMessage>
</ValidationRule>