force-app/main/default/objects/R_D_Idea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Competition__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Rejected_Reason__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>